--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "path": "^0.12.7",
+    "query-string": "^6.14.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.1.3",
